Remotion/ObjectBinding/Web/Res/Themes/NovaViso/HTML/BocReferenceValue.css
/* Style applied to the BocReferenceValue. */

.bocReferenceValue
{
  /* defined inline on the markup */
  --width: 0px;

  --input-width: minmax(var(--width), var(--remotion-themed-control-width));
  min-height: var(--remotion-themed-singleline-min-height);
  display: inline-block;
}

.bocReferenceValue.reserveOptionsMenuWidth
{
  width: var(--remotion-themed-control-width);
}

.bocReferenceValue span.body
{
  width: 100%;
  box-sizing: border-box;
  display: inline-grid;
  grid-template-areas: "content optionsMenu";
  grid-template-columns: var(--input-width) min-content;
  align-items: center;
}

.bocReferenceValue.reserveOptionsMenuWidth span.body
{
  grid-template-columns: auto min-content;
}

.bocReferenceValue span.icon
{
  grid-area: content;
}

.bocReferenceValue.readOnly span.icon
{
  align-self: start;
  padding: var(--remotion-themed-control-padding-readonly);
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0;
  border: var(--remotion-themed-border-readonly);
}

.bocReferenceValue span.icon img
{
  position: relative;
  width: var(--default-icon-size);
  height: var(--default-icon-size);
  pointer-events: none;

  /* Currently used for overriding img.Icon rule in Style.css. */
  vertical-align: top;
}

.bocReferenceValue:not(.readOnly) span.icon img
{
  padding-left: calc(var(--remotion-themed-spacing) + 2 * var(--remotion-themed-border-width));
}

.bocReferenceValue.readOnly span.icon img
{
  padding-top: var(--remotion-themed-border-width);
  padding-left: calc(var(--remotion-themed-spacing) + var(--remotion-themed-border-width));
}

.bocReferenceValue span.content
{
  grid-row: 1;
  grid-column: content;
  display: inline-flex;
}

.bocReferenceValue span.content select
{
  width: 100%;
}

.blink .bocReferenceValue span.content select,
.mozilla .bocReferenceValue span.content select
{
  padding-top: revert;
}

.bocReferenceValue span.content.hasIcon select
{
  padding-left: calc(var(--default-icon-size) + var(--remotion-themed-spacing));
}

.mozilla .bocReferenceValue span.content.hasIcon select
{
  padding-left: calc(var(--default-icon-size) + var(--remotion-themed-spacing) + var(--remotion-themed-border-width) + var(--remotion-themed-spacing-small));
}

.bocReferenceValue span.content select.error
{
  background-image: url('../Image/sprite.svg#ReferenceValueErrorIndicator');
  background-size: var(--remotion-themed-line-height);
  background-position: right var(--remotion-themed-img-width) center;
  background-repeat: no-repeat;
}

.bocReferenceValue span.content select option
{
  padding: var(--remotion-themed-spacing-small) auto;
}

.bocReferenceValue.disabled:not(.readOnly) span.content
{
  color: var(--color-disabled-text);
  cursor: default;
}

.bocReferenceValue.readOnly span.content
{
  min-height: var(--remotion-themed-singleline-min-height);
  box-sizing: border-box;
  display: flex;
  align-items: center;
  padding: var(--remotion-themed-control-padding-readonly);
  border: var(--remotion-themed-border-readonly);
  border-radius: var(--remotion-themed-border-radius);
}

.bocReferenceValue.readOnly span.content:focus-within
{
  outline: none;
  border: var(--remotion-themed-border-readonly-focus);
  background-color: var(--remotion-themed-background-color-readonly-focus);
  box-shadow: var(--remotion-themed-box-shadow-readonly-focus);
}

.bocReferenceValue.readOnly span.content span
{
    overflow-wrap: anywhere;
    word-break: normal;
}

span.bocReferenceValue.readOnly span.content span:empty
{
  /* Ensures that the keyboard focus of empty readonly values surrounds the entires width of the span. */
  width: 100%;
}

span.bocReferenceValue.readOnly span.content span:empty::before
{
  /* Inserting a 'zero width space' unicode character as placeholder so that empty
  readonly values are not collapsed and can therefore visualize the keyboard focus.
  This also scales with the font size and min-height doesn't have to be set since
  line height remains unchanged. */
  content: "\200b";
}

.bocReferenceValue.readOnly span.content.hasIcon span
{
  padding-left: calc(var(--default-icon-size) + var(--remotion-themed-spacing-small) + var(--remotion-themed-border-width));
}

.bocReferenceValue span.optionsMenu
{
  grid-area: optionsMenu;
  /* by not using gap on the parent element, we don't need to adjust the grid-template when the optionsMenu is not rendered. */
  margin-left: var(--remotion-themed-spacing);
  align-self: baseline;
}

